# protos

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
config/: local.example.toml  relay.example.toml
crates/common/: Cargo.toml
crates/common/src/: config.rs  io.rs  lib.rs  mtproxy.rs  protocol.rs  socks.rs  telemetry.rs  tls.rs
crates/tg_local/: Cargo.toml
crates/tg_local/src/: lib.rs  main.rs
crates/tg_local/tests/: e2e.rs
crates/tg_relay/: Cargo.toml
crates/tg_relay/src/: lib.rs  main.rs  official_mtproxy.rs  telegram_fetch.rs
crates/tg_relay/tests/: direct_socks.rs  mtproxy.rs
docs/: arch.md  architecture.md  client_setup_desktop.md  client_setup_mobile.md  deploy_ubuntu.md  local_run_mac.md  operations.md  testing.md
scripts/: dev_cert.sh  fetch_telegram_config.sh  run_local.sh  run_relay.sh  smoke_test.sh
systemd/: tg-relay.service
