[package]
name = "common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aes.workspace = true
anyhow.workspace = true
ctr.workspace = true
hex.workspace = true
hmac.workspace = true
rand.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
rustls-pki-types.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
webpki-roots.workspace = true

[dev-dependencies]
tempfile.workspace = true
