[package]
name = "tg_local"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
common = { path = "../common" }
tokio.workspace = true
tokio-rustls.workspace = true
tracing.workspace = true

[dev-dependencies]
rcgen.workspace = true
tempfile.workspace = true
tokio.workspace = true
tg_relay = { path = "../tg_relay" }
