[package]
name = "tg_relay"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
common = { path = "../common" }
hex.workspace = true
reqwest.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tracing.workspace = true

[dev-dependencies]
hmac.workspace = true
rand.workspace = true
sha2.workspace = true
tempfile.workspace = true
